[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydt-utils"
version = "0.1.1"
description = "Thermal cycle analysis, validation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
    { name = "Vishwa A", email = "vishwa7890@gmail.com" }
]

keywords = ["digital-twin", "brazing", "thermal-analysis", "simulation", "anomaly-detection"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/vishwa7890/pydt-utils"
Documentation = "https://github.com/vishwa7890/pydt-utils#readme"
Repository = "https://github.com/vishwa7890/pydt-utils"
Issues = "https://github.com/vishwa7890/pydt-utils/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydt_utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\\.pyi?$'

[tool.coverage.run]
source = ["pydt_utils"]
omit = ["*/tests/*", "*/test_*.py"]
